<resources>
    <string name="app_name">Activity 6</string>
    <string name="dialogs">DIALOGS</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="date_picker">Date Picker</string>
    <string name="time_picker">Time Picker</string>
    <string name="item_picker">Item Picker</string>
    <string name="enhance_user_engagement_and_functionality_within_your_application_using_intuitive_dialogs_our_dialog_features_include">Enhance user engagement and functionality within your application using intuitive dialogs. Our dialog features include:</string>
</resources>