<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_dialog"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:letterSpacing="0.5"
        android:text="@string/dialogs"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_dialog"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/enhance_user_engagement_and_functionality_within_your_application_using_intuitive_dialogs_our_dialog_features_include"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/alert_dialog_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                tools:ignore="TextSizeCheck">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_warning_24"
                    app:backgroundTint="@null"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="35dp"
                    android:gravity="center"
                    android:letterSpacing="0.2"
                    android:text="@string/alert_dialog"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/date_picker_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/alert_dialog_button"
                app:cardCornerRadius="10dp"
                tools:ignore="ObsoleteLayoutParam,TextSizeCheck">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_date_range_24"
                    app:backgroundTint="@null"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="35dp"
                    android:gravity="center"
                    android:letterSpacing="0.2"
                    android:text="@string/date_picker"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/time_picker_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                tools:ignore="TextSizeCheck">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_access_time_filled_24"
                    app:backgroundTint="@null"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="35dp"
                    android:gravity="center"
                    android:letterSpacing="0.2"
                    android:text="@string/time_picker"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_picker_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/alert_dialog_button"
                app:cardCornerRadius="10dp"
                tools:ignore="ObsoleteLayoutParam,TextSizeCheck">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_checklist_rtl_24"
                    app:backgroundTint="@null"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="35dp"
                    android:gravity="center"
                    android:letterSpacing="0.2"
                    android:text="@string/item_picker"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/parent_linear_layout"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="Display Results:"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/alert_dialog_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date_picker_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/time_picker_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_picker_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>